# serializer version: 1
# name: test_entities[valve-room_sensors][valve.heating_circuit_1_patterilammitys_valve_position_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.heating_circuit_1_patterilammitys_valve_position_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Valve position setpoint',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Valve position setpoint',
    'platform': 'ouman_eh_800',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 7>,
    'translation_key': 'valve_position_setpoint',
    'unique_id': '01JABCDEFGHIJKLMNOPQRSTUVW_l1_valve_position_setpoint',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[valve-room_sensors][valve.heating_circuit_1_patterilammitys_valve_position_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 0,
      'device_class': 'water',
      'friendly_name': 'Heating circuit 1 Patterilämmitys Valve position setpoint',
      'is_closed': True,
      'supported_features': <ValveEntityFeature: 7>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.heating_circuit_1_patterilammitys_valve_position_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_entities[valve-room_sensors][valve.heating_circuit_2_lattialammitys_valve_position_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.heating_circuit_2_lattialammitys_valve_position_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Valve position setpoint',
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Valve position setpoint',
    'platform': 'ouman_eh_800',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 7>,
    'translation_key': 'valve_position_setpoint',
    'unique_id': '01JABCDEFGHIJKLMNOPQRSTUVW_l2_valve_position_setpoint',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[valve-room_sensors][valve.heating_circuit_2_lattialammitys_valve_position_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 0,
      'device_class': 'water',
      'friendly_name': 'Heating circuit 2 Lattialämmitys Valve position setpoint',
      'is_closed': True,
      'supported_features': <ValveEntityFeature: 7>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.heating_circuit_2_lattialammitys_valve_position_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
